--- a/src/pages/Settings/components/Privacy/style.scss
+++ b/src/pages/Settings/components/Privacy/style.scss
@@ -34,7 +34,7 @@
       align-self: stretch;
       border-radius: 12px;
       background: var(--Text-13, #1b1d23);
-      margin-top: 14px;
+      margin-bottom: 14px;
       .mantine-Switch-label {
         color: var(--Neutral-White, #fff);
 
