--- a/src/pages/Settings/components/Password/style.scss
+++ b/src/pages/Settings/components/Password/style.scss
@@ -1,6 +1,6 @@
 .password_change {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,7 +24,6 @@
       border-radius: 16px;
       background: var(--blue-blue-500, #0385ca);
       display: flex;
-      width: 100px;
       padding: 12px 14px;
       justify-content: center;
       align-items: center;
@@ -91,3 +90,5 @@
     }
   }
 }
+
+
