--- a/src/pages/Settings/style.scss
+++ b/src/pages/Settings/style.scss
@@ -5,6 +5,11 @@
   justify-content: space-between;
   align-items: flex-start;
   padding: 20px;
+  .content{
+    .input-data{
+      margin: 0 0 12px 0;
+    }
+  }
   .settings_sidebar {
     width: 28%;
     height: 100%;
@@ -13,6 +18,9 @@
     flex-direction: column;
     justify-content: flex-start;
     padding: 0;
+    ul{
+      padding: 0;
+    }
     h1 {
       color: #fff;
       padding-left: 24px;
@@ -57,5 +65,45 @@
     border-radius: 24px;
     background: var(--Text-15, #121317);
     padding: 30px 35px;
+  }
+}
+
+
+@media only screen and (width < 640px) {
+  .settings-container{
+    flex-direction: column;
+    .settings_sidebar, .content{
+      width: 100%;
+    }
+    .settings_sidebar {
+      ul{
+        display: flex;
+        align-items: center;
+        overflow-x: auto;
+        li{
+          align-self: center;
+          white-space: nowrap;
+        }
+      }
+    }
+  }
+  .general_settings .heading_text, .profile_information .heading_text, .privacy .heading_text, .password_change .heading_text, .balance .heading_text, .delete_acc .heading_text{
+    h1{
+      font-weight: 400;
+      font-size: 22px;
+    }
+    button{
+      font-size: 14px;
+    }
+  }
+}
+
+
+
+@media only screen and (width < 480px) {
+  .password_change .reset_pass_form, .delete_acc .reset_pass_form  {
+    
+      width: 100%;
+    
   }
 }
