--- a/src/pages/ProductDetail/style.scss
+++ b/src/pages/ProductDetail/style.scss
@@ -115,36 +115,41 @@
       display: flex;
       justify-content: space-between;
 
-      img {
-        width: 20px;
-        height: 20px;
-      }
-
-      span {
-        color: var(--Neutral-White, #fff);
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 24px;
-        /* 150% */
-      }
-
-      .like-btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 16px;
-        border: 1px solid var(--Text-11, #23272e);
-        padding: 14px;
-        background-color: transparent;
-        transition: all 0.3s;
-
-        &:hover {
-          background-color: #0087cc !important;
+      .video_bottom_right{
+        gap: 10px;
+        img {
+          width: 20px;
+          height: 20px;
+        }
+  
+        span {
+          color: var(--Neutral-White, #fff);
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 24px;
+          /* 150% */
+        }
+  
+        .like-btn {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border-radius: 16px;
+          border: 1px solid var(--Text-11, #23272e);
+          padding: 14px;
+          background-color: transparent;
+          transition: all 0.3s;
+  
+          &:hover {
+            background-color: #0087cc !important;
+          }
         }
       }
 
+
       .video_bottom_left {
+        gap: 10px;
         .heart {
           cursor: pointer;
 
@@ -219,7 +224,7 @@
           align-items: center;
           border-radius: 16px;
           border: 1px solid var(--Text-11, #23272e);
-          padding: 14px;
+          padding: 18px 14px;
           background-color: transparent;
           gap: 8px;
           transition: all 0.3s;
@@ -228,9 +233,10 @@
             background-color: #0087cc !important;
           }
 
-          img {
-            width: 5.5px;
-          }
+          // img {
+          //   width: 5.7px;
+            
+          // }
         }
 
         .share-btn {
@@ -599,6 +605,143 @@
 
     button {
       margin-right: 12px;
+    }
+  }
+}
+
+
+@media (max-width:820px) {
+  .product_detail{
+    .video_content{
+      .detail_video{
+        height: 360px !important;
+      }
+    }
+
+    .video_detail_content {
+
+      .video_logo {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        opacity: 0.4;
+        width: 119px;
+        height: 32px;
+        flex-shrink: 0;
+      }
+
+      .video_top {
+        .price {
+          background-color: #0087cc;
+          padding: 5px 25px;
+          position: absolute;
+          top: 300px !important;
+          left: 20px;
+          border-radius: 25px;
+          transition: all 0.7s ease;
+          color: white;
+          font-size: 14px;
+          font-weight: 600;
+        }
+
+        .wp {
+          position: absolute;
+          right: 20px;
+          top: 300px !important;
+          transition: all 0.7s ease;
+
+          img {
+            width: 48px;
+            height: 48px;
+          }
+        }
+
+        &.paused {
+
+          .price,
+          .wp {
+            top: 250px !important;
+          }
+        }
+      }
+
+      &:hover {
+        .price {
+          top: 250px !important;
+        }
+
+        .wp {
+          top: 250px !important;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width:540px) {
+  .product_detail{
+    .video_content{
+      .detail_video{
+        height: 260px !important;
+      }
+    }
+
+    .video_detail_content {
+
+      .video_logo {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        opacity: 0.4;
+        width: 119px;
+        height: 32px;
+        flex-shrink: 0;
+      }
+
+      .video_top {
+        .price {
+          background-color: #0087cc;
+          padding: 5px 25px;
+          position: absolute;
+          top: 200px !important;
+          left: 20px;
+          border-radius: 25px;
+          transition: all 0.7s ease;
+          color: white;
+          font-size: 14px;
+          font-weight: 600;
+        }
+
+        .wp {
+          position: absolute;
+          right: 20px;
+          top: 200px !important;
+          transition: all 0.7s ease;
+
+          img {
+            width: 48px;
+            height: 48px;
+          }
+        }
+
+        &.paused {
+
+          .price,
+          .wp {
+            top: 150px !important;
+          }
+        }
+      }
+
+      &:hover {
+        .price {
+          top: 150px !important;
+        }
+
+        .wp {
+          top: 150px !important;
+        }
+      }
     }
   }
 }
