--- a/src/pages/ProductDetail/Comments/style.scss
+++ b/src/pages/ProductDetail/Comments/style.scss
@@ -243,9 +243,9 @@
         border: 1px solid var(--Text-11, #23272e);
         padding: 14px;
         background-color: transparent;
-        transition: all .3s;
+        transition: all .3s !important;
         &:hover{
-          background-color: #0087CC;
+          background-color: #0087CC !important;
         }
 
         img {
@@ -269,7 +269,7 @@
         background-color: transparent;
         transition: all .3s;
         &:hover{
-          background-color: #0087CC;
+          background-color: #0087CC !important;
         }
 
         img {
@@ -292,7 +292,7 @@
         font-size: 16px;
         transition: all .3s;
         &:hover{
-          background-color: #0087CC;
+          background-color: #0087CC !important;
         }
 
       }
