--- a/src/components/ShortsPCard/style.scss
+++ b/src/components/ShortsPCard/style.scss
@@ -1,3 +1,15 @@
+.shorts_page{
+  .slider{
+    max-width: 700px;
+    cursor: grab;
+    margin: auto;
+    padding: 25px 0;
+  }
+  .slider, .swiper {
+    height: 100vh;
+    overflow: hidden;
+  }
+}
 .shorts_page_card {
   display: flex;
   width: 476px;
@@ -5,12 +17,13 @@
   justify-content: center;
   align-items: center;
   gap: 24px;
-
+ 
   .wrapper {
     position: relative;
     transition: all 0.3s !important;
 
     .main {
+      cursor: default;
       width: 404px !important;
       height: 722px !important;
       flex-shrink: 0 !important;
@@ -125,7 +138,8 @@
       transition: left 0.3s ease;
       // z-index: 4845;
       .comment_head {
-        width: 487px;
+        min-width: 450px;
+        width: 100%;
         height: 500px;
         background-color: #16181d;
         transition: left 0.3s ease !important;
@@ -327,7 +341,8 @@
       .comment_write {
         margin-top: 10px;
         height: 200px;
-        width: 487px;
+        min-width: 450px;
+        width: 100%;
         background-color: #16181d;
         transition: left 0.3s ease;
         border-radius: 16px;
@@ -356,7 +371,8 @@
           border: none;
           border-bottom: 1px solid #353a45;
           color: #a2a8b7;
-          width: 347px !important;
+          max-width: 347px !important;
+          width: 100%;
           padding-bottom: 10px;
 
           &::placeholder {
@@ -392,11 +408,10 @@
       }
 
       &.open {
-        left: -300px;
+        left: -500px;
       }
 
       .comment_content {
-        padding: 10px;
 
         p {
           color: #000;
@@ -426,11 +441,93 @@
       }
     }
   }
+ 
 }
 
 .share-btn {
   background-color: transparent !important;
   border: none !important;
   outline: none !important;
+}
+
+@media only screen and (width < 1300px){
+  .shorts_page_card {
+    width: 90%;
+    .wrapper{
+      width: 100%;
+      .main{
+        width: 100% !important;
+      }
+      .shorts_page_content{
+        left: initial;
+        right: 25px;
+        bottom: 40px;
+      }
+      .shorts_page_content{
+        width: initial;
+        border-radius: 14px;
+        .shorts_page_left  {
+          .icons{
+            background: rgba(255, 255, 255, 0.753) !important;
+            border: 0;
+         }
+        }
+      } 
+    }
+  }
+  .shorts_page_content.hide__buttons  .shorts_page_left {
+    display: none;
+  }
+}
+
+@media only screen and (width < 600px){
   
+  .shorts_page_card .wrapper {
+    .shorts_comment {
+      .comment_head, .comment_write{
+        min-width: initial;
+      }
+    }
+    .shorts_comment.open{
+      position: fixed;
+      top: 30px;
+      width: 100%;
+    }
+   
+    .shorts_comment.open, .main.comment-open{
+      left: 0;
+    }
+    .shorts_page_content.hide__buttons{
+      left: 0;
+    }
+  }
+
+
+}
+
+@media only screen and (width < 480px){
+  .shorts_page_card {
+    width: 100%;
+    .wrapper {
+      .main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh !important;
+        .video {
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          height: initial !important;
+          width: 100% !important;
+          video{
+            height: initial !important;
+            width: 100% !important;
+          }
+        }
+      }
+    }
+    
+  }
+
 }
