--- a/src/pages/ShortsP/style.scss
+++ b/src/pages/ShortsP/style.scss
@@ -2,7 +2,27 @@
     width: 100%;
     height: auto;
     padding: 10px 0;
-
+    .slider{
+        position: relative;
+    }
+    .back__top{
+        padding: 15px 5px 0 5px;
+        color: #fff;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1111;
+        border: 0;
+        background: none ;
+        svg{
+            transition: all .3s ease-in-out;
+            border-radius: 50%;
+        }
+    }
+    .toVideo svg{
+        transform: rotate(-90deg);
+        box-shadow: 0 0 5px 2px #fff;
+    }
     h1 {
         color: #fff;
         /* Poppins/28/Medium */
@@ -39,6 +59,7 @@
     }
 
     .slider_pn{
+        display: none;
         position: absolute;
         // right: 80px;
         // bottom: 70%;
