--- a/src/pages/ProductDetail/style.scss
+++ b/src/pages/ProductDetail/style.scss
@@ -578,7 +578,7 @@
 
 .modal-content {
   width: 100%;
-  height: 200px !important;
+  min-height: 200px !important;
   background-color: #0F0F0F !important;
   display: flex !important;
   justify-content: flex-start !important;
@@ -597,17 +597,18 @@
 
   .share_icons {
     width: 100%;
+    flex-wrap: wrap;
+    gap: 12px;
     height: auto;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding: 10px 0;
 
-    button {
-      margin-right: 12px;
-    }
+   
   }
 }
+
 
 
 @media (max-width:820px) {
@@ -745,3 +746,4 @@
     }
   }
 }
+
