random shorts/from home page to select short

--- a/src/pages/ShortsP/style.scss
+++ b/src/pages/ShortsP/style.scss
@@ -4,9 +4,11 @@
     padding: 10px 0;
     .slider{
         position: relative;
+
+        margin: 15px auto 0 auto;
     }
     .back__top{
-        padding: 15px 5px 0 5px;
+        padding:   5px;
         color: #fff;
         position: absolute;
         top: 0;
