--- a/src/components/ShortsPCard/style.scss
+++ b/src/components/ShortsPCard/style.scss
@@ -2,7 +2,8 @@
   .slider{
     max-width: 700px;
     cursor: grab;
-    margin: auto;
+
+    margin: 0 auto;
     padding: 25px 0;
   }
   .slider, .swiper {
