--- a/src/components/VideoCard/style.scss
+++ b/src/components/VideoCard/style.scss
@@ -48,9 +48,9 @@
     }
 
 
-    .video {
-      width: 100%;
-      height: 100%;
+    .plyr {
+      width: 100% !important;
+      height: 100% !important;
       position: absolute;
       top: 0;
       left: 0;
@@ -79,8 +79,8 @@
       opacity: 1;
     }
 
-    .video {
-      opacity: 1;
+    .plyr {
+      opacity: 1 !important;
     }
 
     .video_count{
