--- a/src/pages/ProductDetail/style.scss
+++ b/src/pages/ProductDetail/style.scss
@@ -587,6 +587,14 @@
   flex-direction: column !important;
   padding: 25px;
 
+  .modal_head{
+    width: 100%;
+
+    img{
+      cursor: pointer;
+    }
+  }
+
   h1 {
     color: var(--Text-4, #a2a8b7);
     font-family: Poppins;
