--- a/src/pages/ProductDetail/style.scss
+++ b/src/pages/ProductDetail/style.scss
@@ -2,14 +2,13 @@
   width: 100%;
   height: auto;
   padding: 10px 0;
-
+  transform: translateY(-25px);
   .video_content {
     // width: 668px;
     // height: 408px;
     position: relative;
 
     .video_detail_content {
-
       .video_logo {
         position: absolute;
         top: 10px;
@@ -25,7 +24,7 @@
           background-color: #0087cc;
           padding: 5px 25px;
           position: absolute;
-          top: 450px;
+          top: 410px;
           left: 20px;
           border-radius: 25px;
           transition: all 0.7s ease;
@@ -37,7 +36,7 @@
         .wp {
           position: absolute;
           right: 20px;
-          top: 450px;
+          top: 410px;
           transition: all 0.7s ease;
 
           img {
@@ -47,7 +46,6 @@
         }
 
         &.paused {
-
           .price,
           .wp {
             top: 380px;
@@ -67,10 +65,26 @@
     }
 
     .video_content_name {
+      height: 100px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-
+      .viev_part {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img{
+          margin-right: 5px;
+        }
+        span {
+          color: var(--Text-4, #a2a8b7);
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 20px;
+        }
+      }
       h4 {
         color: var(--Text-1, #f3f4f6);
         text-overflow: ellipsis;
@@ -98,7 +112,7 @@
       border-radius: 24px;
       overflow: hidden;
 
-      .video {
+      .plyr {
         width: 100% !important;
         height: 100% !important;
 
@@ -114,15 +128,14 @@
     .video_content_bottom {
       display: flex;
       justify-content: space-between;
-      
 
-      .video_bottom_right{
+      .video_bottom_right {
         gap: 10px;
         img {
           width: 20px;
           height: 20px;
         }
-  
+
         span {
           color: var(--Neutral-White, #fff);
           font-size: 16px;
@@ -131,7 +144,7 @@
           line-height: 24px;
           /* 150% */
         }
-  
+
         .like-btn {
           display: flex;
           justify-content: center;
@@ -141,13 +154,12 @@
           padding: 14px;
           background-color: transparent;
           transition: all 0.3s;
-  
+
           &:hover {
             background-color: #0087cc !important;
           }
         }
       }
-
 
       .video_bottom_left {
         gap: 10px;
@@ -236,7 +248,7 @@
 
           // img {
           //   width: 5.7px;
-            
+
           // }
         }
 
@@ -580,17 +592,17 @@
 .modal-content {
   width: 100%;
   min-height: 200px !important;
-  background-color: #0F0F0F !important;
+  background-color: #0f0f0f !important;
   display: flex !important;
   justify-content: flex-start !important;
   align-items: flex-start !important;
   flex-direction: column !important;
   padding: 25px;
 
-  .modal_head{
+  .modal_head {
     width: 100%;
 
-    img{
+    img {
       cursor: pointer;
     }
   }
@@ -613,74 +625,68 @@
     justify-content: flex-start;
     align-items: center;
     padding: 10px 0;
-
-   
   }
 }
 
-@media (max-width:485px) {
-  .product_detail{
-    .video_content_bottom{
+@media (max-width: 485px) {
+  .product_detail {
+    .video_content_bottom {
       overflow-x: scroll !important;
       gap: 40px;
     }
 
-    .comment_footer{
+    .comment_footer {
       gap: 5px !important;
 
-      .like-btn{
+      .like-btn {
         padding: 11px !important;
         border-radius: 10px;
-        img{
+        img {
           width: 17px !important;
           height: 17px !important;
         }
       }
 
-      .replay-btn{
+      .replay-btn {
         padding: 11px !important;
         border-radius: 10px;
-        img{
+        img {
           width: 17px !important;
           height: 17px !important;
         }
       }
 
-      .dot_btn{
+      .dot_btn {
         padding: 11px !important;
         border-radius: 10px;
-        img{
+        img {
           width: 17px !important;
           height: 17px !important;
         }
       }
 
-      .drop_menu{
-        button{
+      .drop_menu {
+        button {
           padding: 11px !important;
-        img{
-          width: 17px !important;
-          height: 17px !important;
-        }
+          img {
+            width: 17px !important;
+            height: 17px !important;
+          }
         }
       }
     }
   }
 }
 
-
-
-@media (max-width:820px) {
-  .product_detail{
-    .video_content{
-      .detail_video{
+@media (max-width: 820px) {
+  .product_detail {
+    .video_content {
+      .detail_video {
         height: 360px !important;
       }
     }
 
     .video_detail_content {
-      
-      
       .video_logo {
         position: absolute;
         top: 10px;
@@ -718,7 +724,6 @@
         }
 
         &.paused {
-
           .price,
           .wp {
             top: 250px !important;
@@ -739,16 +744,15 @@
   }
 }
 
-@media (max-width:540px) {
-  .product_detail{
-    .video_content{
-      .detail_video{
+@media (max-width: 540px) {
+  .product_detail {
+    .video_content {
+      .detail_video {
         height: 260px !important;
       }
     }
 
     .video_detail_content {
-
       .video_logo {
         position: absolute;
         top: 10px;
@@ -786,7 +790,6 @@
         }
 
         &.paused {
-
           .price,
           .wp {
             top: 150px !important;
@@ -806,4 +809,3 @@
     }
   }
 }
-
