--- a/src/pages/ShortsP/style.scss
+++ b/src/pages/ShortsP/style.scss
@@ -7,6 +7,13 @@
 
         margin: 15px auto 0 auto;
     }
+    .page__title{
+        display: flex;
+        align-items: center;
+        h1{
+            margin: 0 0 0 15px;
+        }
+    }
     .back__top{
         display: none;
         padding:   5px;
