--- a/src/pages/Profile/pages/MyVideos/style.scss
+++ b/src/pages/Profile/pages/MyVideos/style.scss
@@ -1,7 +1,7 @@
 .my_video_profile {
   width: 100%;
   height: auto;
-  padding: 12px 0;
+  padding: 12px 10px;
 
   .my__videos{
     gap: 5px 15px;
