--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -7,5 +7,5 @@
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
-  padding-top: 30px;
+  padding: 30px 10px 0 10px;
 }
