--- a/src/pages/ProductDetail/style.scss
+++ b/src/pages/ProductDetail/style.scss
@@ -1,7 +1,7 @@
 .product_detail {
   width: 100%;
   height: auto;
-  padding: 10px 0;
+  padding: 10px;
   transform: translateY(-25px);
   .video_content {
     // width: 668px;
