--- a/src/pages/Profile/components/Categories/style.scss
+++ b/src/pages/Profile/components/Categories/style.scss
@@ -5,7 +5,7 @@
   align-items: center;
   overflow-x: auto;
   gap: 9px;
-  padding: 10px 0;
+  margin: 10px !important;
  
   .active {
     border-radius: 16px !important;
