--- a/src/pages/Profile/pages/About/style.scss
+++ b/src/pages/Profile/pages/About/style.scss
@@ -1,7 +1,7 @@
 .my_about_profile {
     width: 100%;
     height: auto;
-    padding: 12px 0;
+    padding: 12px 10px;
 
     h3 {
         color: #FFF;
