--- a/src/pages/Profile/pages/LikedVideos/style.scss
+++ b/src/pages/Profile/pages/LikedVideos/style.scss
@@ -1,7 +1,7 @@
 .liked_videos_profile {
     width: 100%;
     height: auto;
-    padding: 12px 0;
+    padding: 12px 10px;
     .liked__categories{
         gap: 5px 15px;
     }
