--- a/src/pages/Profile/pages/Shorts/style.scss
+++ b/src/pages/Profile/pages/Shorts/style.scss
@@ -1,7 +1,7 @@
 .shorts_profile {
     width: 100%;
     height: auto;
-    padding: 12px 0;
+    padding: 12px 10px;
     .shorts__categories{
         gap: 5px 15px;
     }
