--- a/src/pages/Subscriptions/style.scss
+++ b/src/pages/Subscriptions/style.scss
@@ -1,7 +1,7 @@
 .subscription {
   width: 100%;
   height: auto;
-  padding: 10px 0;
+  padding: 10px;
 
   .channelCard {
     .channelCard-context {
