--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -3,7 +3,7 @@ header {
   height: 13vh;
   background-color: #0f0f0f;
   display: flex;
-  padding: 20px 27px;
+  padding: 20px 10px;
   justify-content: space-between;
   align-items: center;
   position: relative;
@@ -77,7 +77,7 @@ header {
     border-radius: 16px;
     border: 1px solid var(--Gray-400, #292929);
     display: flex;
-    padding: 11px;
+    padding: 12px;
     justify-content: center;
     align-items: center;
     transition: all 0.3s ease;
@@ -573,5 +573,45 @@ header {
   }
 }
 
+
+@media (max-width:1270px) {
+  .xl_header{
+    .search-wrapper{
+      width: 300px !important;
+    }
+  }
+}
+
+@media (max-width:1260px) {
+  .xl_header{
+    .search-wrapper{
+      width: 250px !important;
+    }
+  }
+}
+
+@media (max-width:1090px) {
+  .xl_header{
+    .search-wrapper{
+      width: 190px !important;
+    }
+  }
+}
+
+@media (max-width:1050px) {
+  .xl_header{
+    .search-wrapper{
+      width: 170px !important;
+    }
+  }
+}
+
+@media (max-width:1030px) {
+  .xl_header{
+    .search-wrapper{
+      width: 140px !important;
+    }
+  }
+}
 
 
