--- a/src/pages/AllChannels/style.scss
+++ b/src/pages/AllChannels/style.scss
@@ -1,7 +1,7 @@
 .all_channels_page{
     width: 100%;
     height: auto;
-    padding: 10px 0;
+    padding: 10px;
 
     h1 {
         color: #fff;
