--- a/src/pages/PopularChannels/style.scss
+++ b/src/pages/PopularChannels/style.scss
@@ -1,7 +1,7 @@
 .popular_channels_page {
     width: 100%;
     height: auto;
-    padding: 10px 0;
+    padding: 10px;
 
     h1 {
         color: #fff;
