--- a/src/pages/Profile/components/Main/style.scss
+++ b/src/pages/Profile/components/Main/style.scss
@@ -1,7 +1,7 @@
 .profile_section {
   width: 100%;
   height: auto;
-  padding: 10px;
+  margin: 10px !important;
   .profile_bg_image {
     width: 100%;
     height: 30vh;
