--- a/src/pages/Profile/pages/Favorites/style.scss
+++ b/src/pages/Profile/pages/Favorites/style.scss
@@ -1,7 +1,7 @@
 .favorites_profile {
     width: 100%;
     height: auto;
-    padding: 12px 0;
+    padding: 12px 10px;
 
     .favorites__categories {
         gap: 5px 15px;
