--- a/src/pages/ShortsP/style.scss
+++ b/src/pages/ShortsP/style.scss
@@ -7,11 +7,26 @@
 
         margin: 15px auto 0 auto;
     }
+
+    .shorts_logo{
+        background-color: #0385CA;
+          border-radius: 10px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 8px;
+        svg{
+          color: #fff;
+          width: 25px !important;
+        }
+      }
     .page__title{
         display: flex;
         align-items: center;
+        gap: 10px;
+
         h1{
-            margin: 0 0 0 15px;
+            margin-top: 7px;
         }
     }
     .back__top{
@@ -108,6 +123,8 @@
             }
         }
     }
+
+
 }
 
 .slide.highlighted {
