--- a/src/components/PChannel/style.scss
+++ b/src/components/PChannel/style.scss
@@ -54,7 +54,7 @@
     padding: 10px;
     transition: 0.5s;
 
-    a {
+    .username {
       color: var(--Text-1, #f3f4f6);
 
       /* Poppins/20/SemiBold */
@@ -64,6 +64,10 @@
       font-weight: 400;
       line-height: 28px;
       /* 140% */
+
+      &:hover{
+        cursor: pointer;
+      }
     }
 
     p {
