--- a/src/pages/Chat/style.scss
+++ b/src/pages/Chat/style.scss
@@ -5,12 +5,11 @@
   transition: all 0.3s ease;
   .nickname {
     display: flex;
-    width: 40px;
-    height: 40px;
-    padding: 8px 0px;
+    
+    padding: 10px 9px;
     justify-content: center;
     align-items: center;
-    border-radius: 200px;
+    border-radius: 50%;
     background: var(--Foundation-Blue---Primary-Light, #ececfe);
     color: var(--Foundation-Blue---Primary-Normal, #4440f3);
     text-align: center;
@@ -21,6 +20,11 @@
     font-style: normal;
     font-weight: 400;
     line-height: 24px; /* 150% */
+  }
+  .message__user{
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
   }
   .chats_list {
     width: 100%;
@@ -63,7 +67,11 @@
       }
     }
     .chats {
+      margin: 0 0 20px 0;
+      height: 48vh;
+      overflow: auto;
       .chat-item {
+        overflow: hidden;
         display: flex;
         padding: 12px;
         align-items: flex-start;
@@ -201,7 +209,7 @@
       gap: 8px;
       flex: 1 0 0;
       background-color: transparent;
-      color: var(--Gray-300, #525252);
+      color: #fff;
       padding: 12px 20px;
       outline: none;
       /* Poppins/16/Medium */
@@ -237,7 +245,7 @@
     gap: 20px;
     flex-grow: 1;
     overflow-y: auto;
-
+    height: 100%;
     .message-item {
       width: 100%;
       display: flex;
