--- a/src/pages/Settings/style.scss
+++ b/src/pages/Settings/style.scss
@@ -74,6 +74,7 @@
     flex-direction: column;
     .settings_sidebar, .content{
       width: 100%;
+      padding: 30px 17px;
     }
     .settings_sidebar {
       ul{
