--- a/src/pages/History/style.scss
+++ b/src/pages/History/style.scss
@@ -22,6 +22,23 @@
       color: white;
       font-size: 17px;
     }
+
+    .card_price {
+      position: absolute !important;
+      bottom: 10px !important;
+      right: 9px !important;
+      width: auto;
+      height: 32px;
+      flex-shrink: 0;
+      border-radius: 22px;
+      background-color: #0b90d4;
+      color: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      backdrop-filter: blur(2.08px);
+      padding: 5px 8px;
+    }
   }
   button {
     display: flex;
