--- a/src/pages/Profile/components/MyVideo/style.scss
+++ b/src/pages/Profile/components/MyVideo/style.scss
@@ -17,6 +17,25 @@
       border-radius: 24px;
       background: rgba(0, 0, 0, 0.24);
       object-fit: cover;
+      position: relative;
+
+    }
+
+    .card_price {
+      position: absolute !important;
+      bottom: 10px !important;
+      right: 9px !important;
+      width: auto;
+      height: 32px;
+      flex-shrink: 0;
+      border-radius: 22px;
+      background-color: #0b90d4;
+      color: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      backdrop-filter: blur(2.08px);
+      padding: 5px 8px;
     }
 
     .heading {
