--- a/src/components/VideoCard/style.scss
+++ b/src/components/VideoCard/style.scss
@@ -64,7 +64,7 @@
     }
     .card_price {
       position: absolute !important;
-      bottom: 10px !important;
+      top: 10px !important;
       right: 9px !important;
       width: auto;
       height: 32px;
