send .container input disploy none very bad

--- a/src/pages/TopVideos/style.scss
+++ b/src/pages/TopVideos/style.scss
@@ -302,9 +302,9 @@
     cursor: pointer;
   }
   
-  .container input {
-    display: none;
-  }
+  // .container input {
+  //   display: none;
+  // }
   
   .container svg {
     overflow: visible;
