--- a/src/pages/TopVideos/style.scss
+++ b/src/pages/TopVideos/style.scss
@@ -7,15 +7,15 @@
 .page__top{
   justify-content: space-between;
 }
-.ant-btn{
-  display: none;
-}
-.ant-modal-close{
-  svg{
-    fill: #fff;
-  }
+// .ant-btn{
+//   display: none;
+// }
+// .ant-modal-close{
+//   svg{
+//     fill: #ffffff;
+//   }
   
-}
+// }
 .d-flex.justify-content-between.align-items-center.gap-3.my-2{
   position: relative;
   z-index: 0;
