--- a/src/pages/TopVideos/style.scss
+++ b/src/pages/TopVideos/style.scss
@@ -1,9 +1,9 @@
 
-.sticky-top {
+// .sticky-top {
     
-  z-index: 0 !important;
+//   z-index: 0 !important;
  
-}
+// }
 .page__top{
   justify-content: space-between;
 }
@@ -16,10 +16,8 @@
 //   }
   
 // }
-.d-flex.justify-content-between.align-items-center.gap-3.my-2{
-  position: relative;
-  z-index: 0;
-}
+
+
 .modal__body{
   .ant-modal-content{
     border: 1px solid var(--Gray-400, #292929);
