new change send

--- a/src/layout/Sidebar/style.scss
+++ b/src/layout/Sidebar/style.scss
@@ -46,8 +46,9 @@
         height: 50.573px;
       }
       .bars {
-        width: 48px;
-        height: 48px;
+        width: 30px;
+        height: 30px;
+        color: white;
       }
     }
     .bottom_section {
