--- a/src/pages/Trending/style.scss
+++ b/src/pages/Trending/style.scss
@@ -2,17 +2,17 @@
   width: 100%;
   height: auto;
   padding: 10px;z
-
-  h1 {
-    color: #fff;
-    /* Poppins/28/Medium */
-    font-family: Poppins;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 36px;
-    /* 128.571% */
-  }
+  
+    .heading_trend {
+      color: white !important;
+      /* Poppins/28/Medium */
+      font-family: Poppins;
+      font-size: 28px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 36px;
+      /* 128.571% */
+    }
 
   .sort_btn {
     display: flex;
